--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>Technology and innovation-driven professional targeting challenging roles in the IT industry within Front-End Development to leverage analytical skills for mutual growth. Proficient in JavaScript, React.js, Redux, HTML, and CSS.</p>
             </div>
             <div class="aboutContainer" id="imgContain">
-                <img src="img/1.png" alt="">
+                <img src="img/profile.jpg" alt="">
             </div>
         </section>
 
